# lumen

./: .gitignore  .mcp.json  Cargo.toml  README.md  build.rs  claude.md  findings.md  gemini.md  progress.md  task.md  task_plan.md
architecture/: ANALISE_PROJETO.md  ATUALIZACAO_HOTKEY.md  CONFIGURACAO_IDIOMAS.md  DASHBOARD_COMPLETO.md  SOLUCAO_CACHE.md  Update.md  token_saver_mcp.md
config/: default.yaml
docs/: CHANGELOG.md  DESCRIPTION.md  GUIA_INSTALACAO_TREINAMENTO.md  GUIA_TESTES.md  PROBLEMAS_RESOLVIDOS.md  RESUMO_EXECUTIVO.md  consertar bugs.drawio
lumen-v1.0.2-kde-fixes/: COMO_APLICAR.md  fix_kde.sh
lumen-v1.0.2-kde-fixes/config/: default.yaml
lumen-v1.0.2-kde-fixes/src/audio/: vad.rs
lumen-v1.0.2-kde-fixes/src/text/: injector.rs
lumen-v1.0.2-kde-fixes/src/transcription/: engine.rs
packaging/: PKGBUILD
packaging/debian/: control  postinst  rules
scripts/: install.sh  uninstall.sh
src/: analytics.rs  config.rs  error.rs  main.rs  state.rs
src/ai/: commands.rs  formatter.rs  mod.rs
src/audio/: capture.rs  vad.rs
src/dictionary/: custom.rs
src/hotkeys/: manager.rs
src/text/: auto_send.rs  injector.rs  mod.rs  snippets.rs
src/transcription/: engine.rs  filler_filter.rs  mod.rs  pipeline.rs
src/ui/: mod.rs  overlay.rs  tray.rs
src/ui/web/: server.rs  ws.rs
src/ui/web/frontend/: package-lock.json  package.json  vite.config.ts
src/ui/web/frontend/src/: App.tsx  (+1 more)
tests/: test_flow.rs
tests/scripts/: list_devices_test.rs  run_test  run_test.rs  test_ai.rs  test_capture.rs  test_default.rs  test_event.rs  test_keys.rs
tools/: injector.py  setup_uinput.sh
(+9 files in other folders)
